--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 ﻿{
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "routes": [
+      { "src": "/(.*)", "dest": "/index.html" }
+    ]
   }
