--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 ﻿{
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
+  
