--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 ﻿{
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
-  
